# daytrader

./: .gitignore  CLAUDE.md  pyproject.toml
config/: default.yaml  instruments.yaml  secrets.yaml.example
docs/ops/: ib-gateway-setup.md  phase2-runbook.md  phase7-runbook.md
docs/trading/: Contract.md.template  PHASE2-DRY-RUN-WALKTHROUGH.md
image-cards/market-overview-20260409/: analysis.md  outline.md  source.md
scripts/: _plan3_trade_utils.py  _s2_scan_mfe_mae.py  bakeoff_plan3_main_run.py  bakeoff_plan3_se1_cost.py  bakeoff_plan3_se2_reversal.py  bakeoff_plan3_se3_quarterly.py  bakeoff_plan3_se4_or_duration.py  bakeoff_s2_atr_scan.py  install_eod_launchd.sh  install_launchd.sh  install_weekly_launchd.sh  levels-ESF-2026-04-09.pine  levels-ESF-2026-04-14.pine  levels-GCF-2026-04-09.pine  levels-GCF-2026-04-14.pine  levels-NQF-2026-04-09.pine  levels-NQF-2026-04-14.pine  levels-QQQ-2026-04-09.pine  levels-QQQ-2026-04-14.pine  levels-SPY-2026-04-09.pine  levels-SPY-2026-04-14.pine  preflight_check.py  premarket-cron.sh  run_eod_launchd.sh  run_premarket_launchd.sh  run_report.py  run_weekly_launchd.sh  uninstall_eod_launchd.sh  uninstall_launchd.sh  uninstall_weekly_launchd.sh  weekly-cron.sh
scripts/launchd/: com.daytrader.report.eod.1400pt.plist.template  com.daytrader.report.premarket.0600pt.plist.template  com.daytrader.report.weekly.sun1400pt.plist.template
src/daytrader/: __init__.py
tests/: conftest.py
tests/cli/: __init__.py  test_reports_cli.py
tests/core/: test_config.py  test_db.py  test_models.py  test_registry.py
tests/journal/: conftest.py  test_auditor.py  test_checklist.py  test_circuit.py  test_cli.py  test_contract.py  test_dry_run.py  test_integration_e2e.py  test_models.py  test_obsidian.py  test_repository.py  test_resume_gate.py  test_trades.py
tests/notifications/: test_notifications.py
tests/premarket/: test_cards.py  test_checklist.py  test_collectors.py  test_futures_collector.py  test_levels_collector.py  test_markdown_renderer.py  test_movers_collector.py  test_news_collector.py  (+3 more)
(+215 files in other folders)
